# ai-app-with-auth-demo

./: .gitignore  README.md
backend/: README.md  main.py  pyproject.toml
backend/src/: .env.example  ai_generator.py  app.py  utils.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py  webhooks.py
docs/: uv.md
frontend/: .env.example  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/apis/challenge/: index.ts
frontend/src/hooks/: useApi.ts
